<resources>
    <string name="app_name">Contrata Totalplay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">Todas las imagenes utilizadas o archivos son para el beneficio de la empresa TotalPlay, estas no son con intenciones de ningun robo de copyright</string>
    <string name="nombre">Nombre Completo: </string>
    <string name="direccion">Direccion Completa: </string>
    <string name="correo">Ingrese su correo electronico: </string>
    <string name="numtel">Ingrese su numero de telefono: </string>
    <string name="infoaftercopy">PLANES TRIPLEPLAY (INTERNET + TV + APPS + TELEFONÍA) PROMOCIONES VÁLIDAS DEL 15 DE JULIO AL 31DE AGOSTO DE 2020. APLICA PARA LAS NUEVAS CONTRATACIONES DE PAQUETES TRIPLEPLAY EN LAS ZONAS CON COBERTURA TOTALPLAY. DESCUENTO DE POR VIDA: TODOS LOS DERECHOS RESERVADOS. TARIFAS REGISTRADAS ANTE IFT. REGISTRO DE LAS PROMOCIONES PRESENTADO ANTE IFT. PRECIOS INCLUYEN IMPUESTOS APLICABLES. PROMOCIONES VÁLIDAS DEL 15 DE JUNIO AL 30 DE JUNIO DEL 2020. PAQUETES TRIPLEPLAY (INTERNET + TV + APPS + TELEFONÍA). DESCUENTO DE POR VIDA: LOS PRIMEROS 5 MESES SE PAGARÁ: PAQUETE INICIAL $619 PRONTO PAGO Y $669 PRECIO DE LISTA, PAQUETE DIVIÉRTETE $669 PRONTO PAGO Y $719 PRECIO DE LISTA, PAQUETE DIVIÉRTETE+ $759 PRONTO PAGO Y $809 PRECIO DE LISTA, PAQUETE EMOCIÓNATE $999 PRONTO PAGO Y $1,079 PRECIO DE LISTA, EMOCIÓNATE+ $1,409 PRONTO PAGO Y $1,489 PRECIO DE LISTA, SORPRRÉNDETE+ $1,929 PRONTO PAGO Y $2,009 PRECIO DE LISTA. PAQUETE MATCH 40+ $809 PRONTO PAGO Y $859 PRECIO DE LISTA, MATCH 80+ $899 PRONTO PAGO Y $949 PRECIO DE LISTA, PAQUETE MATCH 150+ $1,189 PRONTO PAGO Y $1,269 PRECIO DE LISTA, MATCH 250+ $1,599 PRONTO PAGO Y $1,679 PRECIO DE LISTA, MATCH 500+ $2,119 PRONTO PAGO Y $2,199 PRECIO DE LISTA. A PARTIR DEL SEXTO MES SE APLICARÁN DE MANERA MENSUAL LOS SIGUIENTES DESCUENTOS: PAQUETE INICIAL $40 PESOS, PAGANDO $579 PRONTO PAGO Y $629 PRECIO DE LISTA, PAQUETE DIVIÉRTETE $40 PESOS, PAGANDO $629 PRONTO PAGO Y $679 PRECIO DE LISTA, PAQUETE DIVIÉRTETE+ $50 PESOS, PAGANDO $709 PRONTO PAGO Y $759 PRECIO DE LISTA, PAQUETE EMOCIÓNATE $60 PESOS, PAGANDO $939 PRONTO PAGO Y $1,019 PRECIO DE LISTA, EMOCIÓNATE+ $60 PESOS, PAGANDO $1,349 PRONTO PAGO Y $1,429 PRECIO DE LISTA, SORPRÉNDETE+ $80 PESOS, PAGANDO $1,849 PRONTO PAGO Y $1,929 PRECIO DE LISTA. PAQUETE MATCH 40+ $40 PESOS, PAGANDO $769 PRONTO PAGO Y $819 PRECIO DE LISTA, PAQUETE MATCH 80+ $50 PESOS, PAGANDO $849 PRONTO PAGO Y $899 PRECIO DE LISTA, PAQUETE MATCH 150+ $60 PESOS, PAGANDO $1,129 PRONTO PAGO Y $1,209 PRECIO DE LISTA, PAQUETE MATCH 250+ $60 PESOS, PAGANDO $1,539 PRONTO PAGO Y $1,619 PRECIO DE LISTA, MATCH 500+ $80 PESOS, PAGANDO $2,039 PRONTO PAGO Y $2,119 PRECIO DE LISTA. EL DESCUENTO APLICA SIEMPRE Y CUANDO EL CLIENTE SE ENCUENTRE AL CORRIENTE CON SUS PAGOS Y ANTES DE SU FECHA LÍMITE DE PAGO. MÁS MEGAS O MÁS CANALES: TOTALPLAY TELECOMUNICACIONES S.A. DE C.V. TODOS LOS DERECHOS RESERVADOS. TARIFAS REGISTRADAS ANTE IFT. REGISTRO DE LAS PROMOCIONES PRESENTADO ANTE IFT. PRECIOS INCLUYEN IMPUESTOS APLICABLES. PROMOCIÓN VÁLIDA DEL 15 DE JUNIO AL 30 DE JUNIO DEL 2020. PROMOCIÓN DISPONIBLE APLICA PARA CLIENTES NUEVOS EN LA CONTRATACIÓN DE PLANES TRIPLE PLAY. EL PAQUETE INICIAL RECIBIRÁ 30 MEGAS DE DESCARGA DURANTE 30 DÍAS. EL PAQUETE DIVIÉRTETE RECIBIRÁ 80 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE DIVIÉRTETE+ RECIBIRÁ 160 MEGAS DE DESCARGA Y 120 CANALES DURANTE 3 MESES. EL PAQUETE EMOCIÓNATE RECIBIRÁ 300 MEGAS DE DESCARGA Y 275 CANALES DURANTE 3 MESES. EL PAQUETE EMOCIÓANTE+ RECIBIRÁ 275 CANALES DURANTE 3 MESES. EL PAQUETE SORPRÉNDETE+ RECIBIRÁ 275 CANALES DURANTE 3 MESES. EL PAQUETE MATCH 40+ RECIBIRÁ 80 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE MATCH 80+ RECIBIRÁ 160 MEGAS DE DESCARGA Y 120 CANALES DURANTE 3 MESES. EL PAQUETE MATCH 150+ RECIBIRÁ 300 MEGAS DE DESCARGA Y 275 CANALES. EL PAQUETE MATCH 250+ RECIBIRÁ 275 CANALES DURANTE 3 MESES. EL PAQUETE MATCH 500+ RECIBIRÁ 275 CANALES DURANTE 3 MESES. AL FINALIZAR LOS MESES DE PROMOCIÓN SE REGRESARÁ A LA VELOCIDAD DE DESCARGA Y CANALES ORIGINALES DEL PAQUETE CONTRATADO.EN LA CONTRATACIÓN DE PLANES DOBLE PLAY. EL PAQUETE INICIAL RECIBIRÁ 30 MEGAS DE DESCARGA DURANTE 30 DÍAS. EL PAQUETE DIVIÉRTETE RECIBIRÁ 80 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE DIVIÉRTETE+ RECIBIRÁ 160 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE EMOCIÓNATE RECIBIRÁ 300 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE EMOCIÓNATE RECIBIRÁ 275 CANALES DURANTE 30 DÍAS. EL PAQUETE SORPRÉNDETE+ RECIBIRÁ 275 CANALES DURANTE 30 DÍAS. EL PAQUETE MATCH 40 RECIBIRÁ 80 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE MATCH 80 RECIBIRÁ 160 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE MATCH 150 RECIBIRÁ 300 MEGAS DE DESCARGA DURANTE 3 MESES. EL PAQUETE MATCH 250 RECIBIRÁ 275 CANALES DURANTE 30 DÍAS. EL PAQUETE MATCH 500 RECIBIRÁ 275 CANALES DURANTE 30 DÍAS. AL FINALIZAR LOS MESES DE PROMOCIÓN SE REGRESARÁ A LA VELOCIDAD DE DESCARGA ORIGINAL DEL PAQUETE CONTRATADO. NACIONAL NACIONALSERVICIO DE TV ADICIONAL: DURANTE 4 MESES LOS PAQUETES TRIPLE PLAY DIVIÉRTETE, DIVIÉRTETE+, EMOCIÓNATE, EMOCIÓNATE+, SORPRÉNDETE, SORPRÉNDETE+ RECIBIRÁN SIN COSTO EL PRIMER SERVICIO DE TV ADICIONAL CONTRATADA. AL FINALIZAR LOS MESES DE PROMOCIÓN SE DEBERÁ PAGAR EL SERVICIO A PRECIO REGULAR DE $109 PESOS. EL DESCUENTO NO APLICA SOBRE LOS CONSUMOS QUE SE REALICEN DESDE LA TV ADICIONAL. LIMITADO A UN SERVICIO DE TV ADICIONAL. SE PODRÁN CONTRATAR MÁS SERVICIOS DE TV´S ADICIONALES PAGANDO LA RENTA MENSUAL CORRESPONDIENTE AL MOMENTO DE LA INSTALACIÓN. BONO DE PORTABILIDAD: PROMOCIÓN DISPONIBLE PARA CLIENTES NUEVOS, AL CONTRATAR UN PLAN TRIPLEPLAY Y PORTAR LA LÍNEA TELEFÓNICA A TOTALPLAY. A PARTIR DE QUE SE REALICE LA PORTABILIDAD DE LA LÍNEA TELEFÓNICA Y DURANTE 6 MESES, DE MANERA MENSUAL SE REALIZARÁ UNA BONIFICACIÓN DE $100 PESOS SOBRE LA RENTA MENSUAL DEL PAQUETE CONTRATADO. NO APLICA A SERVICIOS ADICIONALES CONTRATADOS. NO ES ACUMULABLE CON LAS PROMOCIONES DE LAS NUEVAS CIUDADES. FOX O HBO: TOTAL PLAY TELECOMUNICACIONES S.A. DE C.V. TODOS LOS DERECHOS RESERVADOS. TARIFAS REGISTRADAS ANTE IFT. REGISTRO DE LAS PROMOCIONES PRESENTADO ANTE IFT. PRECIOS INCLUYEN IMPUESTOS APLICABLES. PROMOCIONES VÁLIDAS DEL 15 DE JUNIO AL 30 DE JUNIO DEL 2020. *EN PLANES TRIPLEPLAY: DURANTE 6 MESES LOS PLANES EMOCIÓNATE, EMOCIÓNATE +, SORPRÉNDETE, SORPRÉNDETE+ TENDRÁN ACTIVA LA PROGRAMACIÓN DE LOS PAQUETES HBO MAX O FOX PREMIUM, A ELECCIÓN DEL CLIENTE. AL TERMINAR LOS MESES DE PROMOCIÓN SE DESACTIVARÁN AUTOMÁTICAMENTE.</string>


    <string name="menu_home"></string>
    <string name="menu_gallery"></string>
    <string name="menu_slideshow"></string>

</resources>