<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.contratatotalplay.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.contratatotalplay.PaquetesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_paquetes" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.app.contratatotalplay.ui.Contenido.ContenidoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_contenidos" />
    <fragment
        android:id="@+id/nav_info4copy"
        android:name="com.app.contratatotalplay.ui.Info.fragment_info4copy"
        tools:layout="@layout/fragment_info4copy" />
    <fragment
        android:id="@+id/netflixpaqs"
        android:name="com.app.contratatotalplay.ui.paquetesnetflix.Fragment_netflixpaqs"
        android:label="Fragment_netflixpaqs" />
</navigation>