<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:backgroundTint="@color/transparent"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginBottom="15dp"
                android:weightSum="20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_weight="19"
                android:textColor="@color/colorPrimary"
                android:textSize="35dp"
                android:text="Contrataciones"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_marginRight="10dp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/info4contra"
                    android:backgroundTint="@color/transparent"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                </LinearLayout>
        </LinearLayout>
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/nombre"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_margin="10dp"
                android:weightSum="20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="17"
                    android:id="@+id/nombredialog"
                    android:textColor="@color/colorPrimary"
                    android:hint="Nombre:"
                    android:inputType="text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:id="@+id/deletename"
                    android:src="@drawable/ic_deleteorigin"
                    android:backgroundTint="@color/transparent"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/direccion"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:weightSum="20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="17"
                    android:id="@+id/direcciondialog"
                    android:textColor="@color/colorPrimary"
                    android:hint="Direccion: "
                    android:inputType="text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageButton
                    android:id="@+id/deletedire"
                    android:src="@drawable/ic_deleteorigin"
                    android:backgroundTint="@color/transparent"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>


            </LinearLayout>



            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/correo"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:weightSum="20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="17"
                    android:id="@+id/emaildialog"
                    android:textColor="@color/colorPrimary"
                    android:hint="Correo:"
                    android:inputType="textEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:id="@+id/deleteemail"
                    android:src="@drawable/ic_deleteorigin"
                    android:backgroundTint="@color/transparent"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>



            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/numtel"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:weightSum="20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="17"
                    android:id="@+id/numeroteldialog"
                    android:textColor="@color/colorPrimary"
                    android:hint="Telefono:"
                    android:inputType="phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:id="@+id/deletenum"
                    android:src="@drawable/ic_deleteorigin"
                    android:backgroundTint="@color/transparent"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>


            <LinearLayout
                android:weightSum="20"
                android:orientation="horizontal"
                android:gravity=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="15"
                    android:layout_margin="10dp"
                    android:weightSum="20"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_weight="20"
                        android:id="@+id/paqueteintdialog"
                        android:textColor="@color/colorPrimary"
                        android:hint="Paquete en el cual esta Interesado"
                        android:inputType="textEmailAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="end"
                    android:weightSum="5"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="5"
                        android:backgroundTint="@color/colorPrimary"
                        android:id="@+id/fab4dialog"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        app:srcCompat="@drawable/ic_redirect2whats" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>